--- a/project-1/buttons.css
+++ b/project-1/buttons.css
@@ -13,10 +13,11 @@
   padding: auto;
   cursor: pointer;
 }
-button:hover {
-    background-image: url(mina/img-1.png);
+.step-1:hover {
+    background-image: url(Mina/img-1.png);
     background-repeat: no-repeat;
-    background-position: 100%;
+    background-size: 100%;
+    height:500px;
 }
 
 .step-2 {
@@ -34,10 +35,11 @@ button:hover {
     padding: auto;
     cursor: pointer;
   }
-  button:hover {
-      background-image: url(mina/img-2.png);
-      background-repeat: no-repeat;
-      background-position: 100%;
+  .step-2:hover {
+    background-image: url(Mina/img-2.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height:500px;
     }
 
 
