--- a/project-1/buttons.css
+++ b/project-1/buttons.css
@@ -59,10 +59,11 @@
     cursor: pointer;
 }
 
-  button:hover {
-      background-image: url(mina/img-3.png);
+  .step-3:hover {
+      background-image: url(Mina/img-3.png);
       background-repeat: no-repeat;
-      background-position: 100%;
+      background-size: 100%;
+      height:500px;
     }
 
 .step-4 {
@@ -81,10 +82,11 @@
     cursor: pointer;
 }
 
-  button:hover {
-      background-image: url(mina/img-4.png);
+  .step-4:hover {
+      background-image: url(Mina/img-4.png);
       background-repeat: no-repeat;
-      background-position: 100%;
+      background-size: 100%;
+      height:500px;
   }
 
 
@@ -104,14 +106,15 @@
     cursor: pointer;
   }
 
-  button:hover {
-      background-image: url(mina/img-5.png);
+  .step-5:hover {
+      background-image: url(Mina/img-5.png);
       background-repeat: no-repeat;
-      background-position: 100%;
+      background-size: 100%;
+      height:500px;
     }
 
 
-.step-6 {
+.step-5a {
     background-color: black;
     color: white;
     width: 100%;
@@ -127,10 +130,11 @@
     cursor: pointer;
 }
 
-  button:hover {
-      background-image: url(mina/img-6.png);
+    .step-5a:hover {
+      background-image: url(Mina/img-5a.png);
       background-repeat: no-repeat;
-      background-position: 100%;
+      background-size: 100%;
+      height:500px;
     }
 
 
@@ -150,10 +154,11 @@
     cursor: pointer;
 }
 
-  button:hover {
-      background-image: url(mina/img-7.png);
+    .step-7:hover {
+      background-image: url(Mina/img-7.png);
       background-repeat: no-repeat;
-      background-position: 100%;
+      background-size: 100%;
+      height:500px;
     }
 
 
@@ -173,10 +178,11 @@
     cursor: pointer;
 }
 
-  button:hover {
+    .step-8:hover {
       background-image: url(mina/img-8.png);
       background-repeat: no-repeat;
-      background-position: 100%;
+      background-size: 100%;
+      height:500px;
     }
 
 
@@ -195,10 +201,11 @@
     padding: auto;
     cursor: pointer;
 }
-    button:hover {
+    .step-9:hover {
       background-image: url(mina/img-9.png);
       background-repeat: no-repeat;
-      background-position: 100%;
+      background-size: 100%;
+      height:500px;
     }
 
 
@@ -218,10 +225,11 @@
     cursor: pointer;
 }
 
-  button:hover {
+    .step-10:hover {
       background-image: url(mina/img-10.png);
       background-repeat: no-repeat;
-      background-position: 100%;
+      background-size: 100%;
+      height:500px;
     }
 
 .step-11 {
@@ -240,10 +248,11 @@
     cursor: pointer;
 }
 
-  button:hover {
+    .step-11:hover {
       background-image: url(mina/img-11.png);
       background-repeat: no-repeat;
-      background-position: 100%;
+      background-size: 100%;
+      height:500px;
     }
     
 .step-12 {
@@ -262,10 +271,11 @@
     cursor: pointer;
 }
     
-    button:hover {
+.step-12:hover {
         background-image: url(mina/img-12.png);
         background-repeat: no-repeat;
-        background-position: 100%;
+        background-size: 100%;
+        height:500px;
     }
 
 .step-13 {
@@ -284,10 +294,11 @@
     cursor: pointer;
 }
     
-    button:hover {
+    .step-13:hover {
         background-image: url(mina/img-13.png);
         background-repeat: no-repeat;
-        background-position: 100%;
+        background-size: 100%;
+        height:500px;
     }
 
 .step-14 {
@@ -306,10 +317,11 @@
     cursor: pointer;
 }
     
-    button:hover {
+    .step-14:hover {
         background-image: url(mina/img-14.png);
         background-repeat: no-repeat;
-        background-position: 100%;
+        background-size: 100%;
+        height:500px;
     }
 
 .step-15 {
@@ -328,10 +340,11 @@
     cursor: pointer;
 }
     
-    button:hover {
+   .step-15:hover {
         background-image: url(mina/img-15.png);
         background-repeat: no-repeat;
-        background-position: 100%;
+        background-size: 100%;
+        height:500px;
     }
 
 .step-16 {
@@ -350,10 +363,11 @@
     cursor: pointer;
 }
     
-    button:hover {
+    .step-16:hover {
         background-image: url(mina/img-16.png);
         background-repeat: no-repeat;
-        background-position: 100%;
+        background-size: 100%;
+        height:500px;
     }
 
 .step-17 {
@@ -372,10 +386,11 @@
     cursor: pointer;
 }
     
-    button:hover {
+    .step-17:hover {
         background-image: url(mina/img-17.png);
         background-repeat: no-repeat;
-        background-position: 100%;
+      background-size: 100%;
+      height:500px;
     }
 
 .step-18 {
@@ -394,8 +409,9 @@
     cursor: pointer;
 }
     
-    button:hover {
+    .step-18:hover {
         background-image: url(mina/img-18.png);
         background-repeat: no-repeat;
-        background-position: 100%;
+      background-size: 100%;
+      height:500px;
     }
