--- a/project-2/style.css
+++ b/project-2/style.css
@@ -10,7 +10,9 @@ body {
     display:flex;
     justify-content: center;
     text-align:justify;
-    margin: auto 20%;
+    margin-top: 10%;
+    margin-left: 20%;
+    margin-right: 20%;
  
   }
   .body-text ul {
@@ -62,6 +64,7 @@ body {
     padding-right: 5%;
     border-style: none;
     box-shadow: 5px 10px #888888;
+    border-radius: 5px;
 }
 
 .alert-button:hover {
